SBF: transmit movepath, send multi packets, xstream, annotations